24 October 2011: Wouter
	- Fix resolve of partners.extranet.microsoft.com with a fix for the
	  server selection for choosing out of a (particular) list of bad
	  choices.

21 October 2011: Wouter
	- fix --enable-allsymbols, fptr wlist is disabled on windows with this 
	  option enabled because of memory layout exe vs dll.

19 October 2011: Wouter
	- fix unbound-anchor for broken strptime on OSX lion, detected
	  in configure.
	- Detect if GOST really works, openssl1.0 on OSX fails.
	- Implement ipv6%interface notation for scope_id usage.

17 October 2011: Wouter
	- better documentation for inform_super (Thanks Yang Zhe).

14 October 2011: Wouter
	- Fix for out-of-memory condition in libunbound (thanks
	  Robert Fleischman).

13 October 2011: Wouter
	- Fix --enable-allsymbols, it depended on link specifics of the
	  target platform, or fptr_wlist assertion failures could occur.

12 October 2011: Wouter
	- updated contrib/unbound_munin_ to family=auto so that it works with
	  munin-node-configure automatically (if installed as
	  /usr/local/share/munin/plugins/unbound_munin_ ).

27 September 2011: Wouter
	- unbound.exe -w windows option for start and stop service.

23 September 2011: Wouter
	- TCP-upstream calculates tcp-ping so server selection works if there
	  are alternatives.

20 September 2011: Wouter
	- Fix classification of NS set in answer section, where there is a
	  parent-child server, and the answer has the AA flag for dir.slb.com.
	  Thanks to Amanda Constant from Secure64.

16 September 2011: Wouter
	- fix bug #408: accept patch from Steve Snyder that comments out
	  unused functions in lookup3.c.
	- iana portlist updated.
	- fix EDNS1480 change memleak and TCP fallback.
	- fix various compiler warnings (reported by Paul Wouters).
	- max sent count.  EDNS1480 only for rtt < 5000.  No promiscuous
	  fetch if sentcount > 3, stop query if sentcount > 16.  Count is
	  reset when referral or CNAME happens.  This makes unbound better